manager: fix crash in platform_link_added

https://bugzilla.gnome.org/show_bug.cgi?id=764606